--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "naughty-videos": "^1.0.2",
+    "porn-lib": "^1.4.1",
+    "r34.api": "^1.6.0",
     "telegraf": "^4.12.2",
-    "telegram-keyboard": "^2.3.2"
+    "telegram-keyboard": "^2.3.2",
+    "tslib": "^2.5.0",
+    "xvideos": "^0.0.4",
+    "xvideos-lib": "^1.1.21",
+    "xvideos-scraper": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
