--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NSWF-tg-bot",
+  "name": "nswf-tg-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,19 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "dotenv": "^16.0.3",
-    "naughty-videos": "^1.0.2",
-    "porn-lib": "^1.4.1",
-    "r34.api": "^1.6.0",
-    "telegraf": "^4.12.2",
-    "telegram-keyboard": "^2.3.2",
-    "tslib": "^2.5.0",
-    "xvideos": "^0.0.4",
-    "xvideos-lib": "^1.1.21",
-    "xvideos-scraper": "^1.0.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "dotenv": "^16.4.5",
+    "nswfparse": "^3.1.2",
+    "telegraf": "^4.16.3",
+    "telegram-keyboard": "^2.3.5"
   }
 }
